@@ -1,0 +1,13 @@
+package com.example.chaos.monkey.chaosdemo;
+
+import org.springframework.boot.test.context.SpringBootTest;
+
+import static org.junit.Assert.*;
+
+/**
+ * @author Benjamin Wilms
+ */
+@SpringBootTest
+public class ChaosDemoApplicationIntegrationTest {
+
+}
